# reciprocator-lm

./: .gitignore  README.md  memory-engines.md  pyproject.toml  reciprocator.md
corpora/greek_philosophy_classics/: README.md  sources.tsv
corpora/plato_jowett/: README.md  sources.tsv
scripts/: capacity_matched_sweep.py  collect_online_experience.py  prime_reciprocator_state.py  reciprocator_only_tokenizer.model  reciprocator_only_tokenizer.vocab  run_architecture_ablation_table.py  run_binding_pressure_sweep.py  run_gating_benchmark.py  run_rank_ablation.py  run_settling_experiment.py  sleep_train.py  train_reciprocator_only.py  train_tiny.py
src/reciprocator_lm/: __init__.py  ablation.py  baselines.py  benchmarks.py  complex.py  config.py  corpora.py  experiments.py  model.py  model_complex_backbone.py  model_engine.py  model_predictors.py  model_spectral.py  model_state.py  probes.py  runtime.py  scan.py  sleep.py  tokenization.py
tests/: test_ablation.py  test_architecture_ablation_table.py  test_baselines.py  test_benchmarks.py  test_corpora.py  test_experiments.py  test_model.py  test_probes.py  test_runtime.py  test_scan.py  test_sleep.py  test_tokenization.py
