[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reciprocator-llm"
version = "0.1.0"
description = "Research prototype for a modified transformer-based language model."
requires-python = ">=3.9"
dependencies = [
  "sentencepiece>=0.2.0",
  "torch>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
